actualizacion de back para integracion de erp
